[infra:dependency] fix tensorflow dependency
Update the Pants version to 1.8.0
Fix the tensorflow dependency

--- a/pants.ini
+++ b/pants.ini
@@ -1,10 +1,9 @@
 [GLOBAL]
-pants_version: 1.7.0
+pants_version: 1.8.0
 
 plugins: [
     'pantsbuild.pants.contrib.python.checks==%(pants_version)s',
   ]
 
-[python-setup]
-interpreter_constraints: ["CPython>=3.5"]
-
+#[python-setup]
+#interpreter_constraints: ["CPython>=3.5"]
