--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -1,4 +1,10 @@
+argparse
+click==6.7
+Flask
+Flask-PyMongo
 numpy==1.13.3
-six==1.10.0
+six
+tensorflow
+torch==0.4.0
+torchvision
 tqdm
-tensorflow==1.9.0
